@@ -210,7 +210,8 @@
 				     :colormap (xlib:screen-default-colormap *screen*)
 				     :border-width 1
 				     :border (get-color "Red")
-				     :event-mask '(:exposure :button-press :button-release :pointer-motion)))
+				     :event-mask '(:exposure :key-press :key-release
+						   :button-press :button-release :pointer-motion)))
 	 (gc (xlib:create-gcontext :drawable window
 				   :foreground (get-color "Green")
 				   :background (get-color "Black")
