@@ -1,3 +1,8 @@
+2008-04-12  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm.lisp (init-display): Add key handling on no focus
+	window and on frame windows.
+
 2008-04-11  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm.lisp (main): Keyboard handle strategie change: Grab
